--- a/book-frontend/src/App.css
+++ b/book-frontend/src/App.css
@@ -1,38 +1,37 @@
 .App {
-  text-align: center;
+    text-align: center;
+    justify-content: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.book-gallery {
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-around;
+    align-items: start;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.p-font {
+    font-weight: bold;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.no-book-found {
+    justify-content: center;
+    display: flex;
+    align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+#outlined-required {
+    background-color: beige;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form {
+    margin-top: 200px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
 }
+
+
+
+
